fixed header to be correct size, now connect is visible. Handled an error with contract call that would brick app. It was introduced yesterday

--- a/src/containers/main/HeaderContainer/styles.module.scss
+++ b/src/containers/main/HeaderContainer/styles.module.scss
@@ -24,7 +24,7 @@
   position: fixed;
   width: 100%;
   z-index: 999;
-  height: 100px;
+  height: 80px;
   margin-bottom: 100px;
   @include tablet {
     @include flexbox(center, center);
@@ -42,7 +42,7 @@
 }
 
 .settings_wrap {
-  margin: 75px 0 50px 0;
+  margin: 50px 0 50px 0;
 
   @include tablet {
     display: none;
@@ -85,7 +85,7 @@
 }
 
 .brand{
-  margin-top: 30px;
+  margin-top: 6px;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -165,7 +165,7 @@
 @media only screen and (max-width: 769px) {
   .header_wrap {
     @include flexbox(center, space-between);
-    margin-top: 2.5em;
+    margin-top: 0em;
     padding-left: 1em;
     width: 100%;
     top: 0;
@@ -174,9 +174,9 @@
     @include tablet {
       @include flexbox(center, center);
       display: flex;
-      margin-top: 3.5em;
+      margin-top: 0em;
       flex-direction: row;
-      max-height: 100px;
+      max-height: 80px;
     }
   }
 
