--- a/src/containers/modal/ModalSelectToken/styles.module.scss
+++ b/src/containers/modal/ModalSelectToken/styles.module.scss
@@ -59,6 +59,7 @@
   font-weight: normal;
   font-size: 14px;
   line-height: 140%;
+  margin-top: 10vh;
 
   border-radius: 20px;
   padding: 20px;
